--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@ https://templatemo.com/tm-531-reflux
             <span
               > Hello, my name is Jaehyun Kim! I am a computer engineer who graduated from Cal Poly Pomona. I enjoy technology and have projects related to arduino and 3D Printing.
                 I took several classes that relate to both electrical engineering and computer science. I have also done several personal projects involving PC building, Arduino projects, 3D Printing, etc.
-                I am also an avid gamer who enjoys RPGs and have played multiple online games. Please check out my blogs that are coming soon as well! Please enjoy my website!
+                I am also an avid gamer who enjoys RPGs and have played multiple online games. Please check out my blogs that are coming soon as well! Please enjoy my website!<br>
+              NOTE: May need to refresh the page once or twice in order for the formatting to be correct. Thank you so much!
             </span>
           </div>
           <div class="left-image-post">
@@ -395,12 +396,12 @@ https://templatemo.com/tm-531-reflux
                 <div class="isotope-item" data-type="Personal">
                   <figure class="snip1321">
                     <img
-                      src="assets/images/Bookstand.jpg"
+                      src="assets/images/Lights.jpg"
                       alt="sq-sample26"
                     />
                     <figcaption>
                       <a
-                        href="assets/images/Bookstand.jpg"
+                        href="assets/images/Lights.jpg"
                         data-lightbox="image-1"
                         data-title="Caption"
                         ><i class="fa fa-search"></i
@@ -418,12 +419,12 @@ https://templatemo.com/tm-531-reflux
                 <div class="isotope-item" data-type="Personal">
                   <figure class="snip1321">
                     <img
-                      src="assets/images/Lights.jpg"
+                      src="assets/images/Bookstand.jpg"
                       alt="sq-sample26"
                     />
                     <figcaption>
                       <a
-                        href="assets/images/Lights.jpg"
+                        href="assets/images/Bookstand.jpg"
                         data-lightbox="image-1"
                         data-title="Caption"
                         ><i class="fa fa-search"></i
