--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ https://templatemo.com/tm-531-reflux
                 </li>
 
                 <li>
-                  <a href=" ">
+                  <a href="mailto:digataandrew@gmail.com">
                     <i class="fa fa-envelope"></i>
                   </a>
                 </li>
@@ -90,10 +90,9 @@ https://templatemo.com/tm-531-reflux
             <h2>About Me</h2>
             <div class="line-dec"></div>
             <span
-              > Hello, my name is Jaehyun Kim! I am a computer engineer who graduated from Cal Poly Pomona. I enjoy technology and have projects related to arduino and 3D Printing.
+              > Hello, my name is Jaehyun Kim! I am a computer engineer who graduated from Cal Poly Pomona. I enjoy technology and have projects related to Arduino and 3D Printing.
                 I took several classes that relate to both electrical engineering and computer science. I have also done several personal projects involving PC building, Arduino projects, 3D Printing, etc.
                 I am also an avid gamer who enjoys RPGs and have played multiple online games. Please check out my blogs that are coming soon as well! Please enjoy my website!<br>
-              NOTE: May need to refresh the page once or twice in order for the formatting to be correct. Thank you so much!
             </span>
           </div>
           <div class="left-image-post">
@@ -146,7 +145,7 @@ https://templatemo.com/tm-531-reflux
           <div class="section-heading">
             <h2>Skills</h2>
             <div class="line-dec"></div>
-            <span>These are some of the skills that I have.</span>
+            <span>These are some of the skills that I have. My skills are mainly in hardware and software.</span>
           </div>
 
           <div class="row">
@@ -203,9 +202,9 @@ https://templatemo.com/tm-531-reflux
           <div class="section-heading">
             <h2>Portfolio</h2>
             <div class="line-dec"></div>
-            <span>This is my Portfolio. This includes my projects done with my senior project teams, my school projects, and my personal projects.</span>
-          </div>
-          <div class="row">
+            <span>This is my Portfolio. This includes my projects done with my senior project teams, my school projects, and my personal projects.<br>
+              NOTE: Due to caching, you may need to refresh the page once or twice in order for the formatting to be correct.<br>
+              You may also click on individual tabs to fix formatting. Thank you so much! <br><br>
             <div class="isotope-wrapper">
               <form class="isotope-toolbar">
                 <label
@@ -281,7 +280,7 @@ https://templatemo.com/tm-531-reflux
                       <h4>Robotic Arm</h4>
                       <span>•A robotic arm that was made to mass produce supercapacitors.<br>
                             •The arm operates on computer vision and YOLO program.<br>
-                            •and detects individual components of supercapacitors to stack.
+                            •Detects individual components of supercapacitors to stack.
                       </span>
                     </figcaption>
                   </figure>
@@ -301,7 +300,10 @@ https://templatemo.com/tm-531-reflux
                         ><i class="fa fa-search"></i
                       ></a>
                       <h4>Power Management System</h4>
-                      <span>customize anything</span>
+                      <span>•Main power source of the UAV consisting of two lipo batteries.<br>
+                            •Contains relay to switch between the two batteries in order to charge one batter while in flight.<br>
+                            •Delivers power to all parts of the plane and connected to Graphene supercapacitor and solar panels.<br>
+                      </span>
                     </figcaption>
                   </figure>
                 </div>
